--- a/examples/minimal-web/Cargo.toml
+++ b/examples/minimal-web/Cargo.toml
@@ -14,6 +14,10 @@ log = "0.4"
 pixels = { path = "../.." }
 winit = "0.27"
 winit_input_helper = "0.13"
+egui = "0.20"
+egui-wgpu = "0.20"
+egui-winit = { version = "0.20", default-features = false, features = ["links"] }
+env_logger = "0.10"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
